--- a/codekit-config.json
+++ b/codekit-config.json
@@ -13,6 +13,39 @@
       "outputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/lib\/drivers\/node-mongodb-native\/collection-min.js",
       "fileType" : 64
     },
+    "\/deploy\/node_modules\/express\/node_modules\/connect\/lib\/public\/icons\/page_refresh.png" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 1,
+      "hidden" : 1,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/deploy\/node_modules\/express\/node_modules\/connect\/lib\/public\/icons\/page_refresh.png",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/deploy\/node_modules\/express\/node_modules\/connect\/lib\/public\/icons\/page_refresh.png",
+      "initialSize" : 858,
+      "fileType" : 8192
+    },
+    "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/lib\/mongodb\/utils.js" : {
+      "ignoreWasSetByUser" : 1,
+      "ignore" : 1,
+      "hidden" : 1,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/lib\/mongodb\/utils.js",
+      "outputStyle" : 0,
+      "syntaxCheckerStyle" : 0,
+      "outputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/lib\/mongodb\/utils-min.js",
+      "fileType" : 64
+    },
+    "\/deploy\/node_modules\/express\/node_modules\/connect\/lib\/middleware\/query.js" : {
+      "ignoreWasSetByUser" : 1,
+      "ignore" : 1,
+      "hidden" : 1,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/deploy\/node_modules\/express\/node_modules\/connect\/lib\/middleware\/query.js",
+      "outputStyle" : 0,
+      "syntaxCheckerStyle" : 0,
+      "outputAbbreviatedPath" : "\/deploy\/node_modules\/express\/node_modules\/connect\/lib\/middleware\/query-min.js",
+      "fileType" : 64
+    },
     "\/deploy\/node_modules\/express\/node_modules\/connect\/lib\/public\/icons\/page_add.png" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 1,
@@ -34,39 +67,6 @@
       "syntaxCheckerStyle" : 0,
       "outputAbbreviatedPath" : "\/deploy\/node_modules\/express\/node_modules\/connect\/test-min.js",
       "fileType" : 64
-    },
-    "\/deploy\/node_modules\/express\/node_modules\/connect\/lib\/middleware\/query.js" : {
-      "ignoreWasSetByUser" : 1,
-      "ignore" : 1,
-      "hidden" : 1,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/deploy\/node_modules\/express\/node_modules\/connect\/lib\/middleware\/query.js",
-      "outputStyle" : 0,
-      "syntaxCheckerStyle" : 0,
-      "outputAbbreviatedPath" : "\/deploy\/node_modules\/express\/node_modules\/connect\/lib\/middleware\/query-min.js",
-      "fileType" : 64
-    },
-    "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/lib\/mongodb\/utils.js" : {
-      "ignoreWasSetByUser" : 1,
-      "ignore" : 1,
-      "hidden" : 1,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/lib\/mongodb\/utils.js",
-      "outputStyle" : 0,
-      "syntaxCheckerStyle" : 0,
-      "outputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/lib\/mongodb\/utils-min.js",
-      "fileType" : 64
-    },
-    "\/deploy\/node_modules\/express\/node_modules\/connect\/lib\/public\/icons\/page_refresh.png" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 1,
-      "hidden" : 1,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/deploy\/node_modules\/express\/node_modules\/connect\/lib\/public\/icons\/page_refresh.png",
-      "processed" : 0,
-      "outputAbbreviatedPath" : "\/deploy\/node_modules\/express\/node_modules\/connect\/lib\/public\/icons\/page_refresh.png",
-      "initialSize" : 858,
-      "fileType" : 8192
     },
     "\/deploy\/node_modules\/express\/node_modules\/connect\/node_modules\/formidable\/test\/legacy\/system\/test-multi-video-upload.js" : {
       "ignoreWasSetByUser" : 1,
@@ -317,6 +317,17 @@
       "outputStyle" : 0,
       "syntaxCheckerStyle" : 0,
       "outputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/lib\/mongodb\/commands\/kill_cursor_command-min.js",
+      "fileType" : 64
+    },
+    "\/build\/js\/views\/AboutView.js" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 1,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/build\/js\/views\/AboutView.js",
+      "outputStyle" : 0,
+      "syntaxCheckerStyle" : 0,
+      "outputAbbreviatedPath" : "\/build\/js\/views\/AboutView-min.js",
       "fileType" : 64
     },
     "\/deploy\/node_modules\/express\/node_modules\/connect\/lib\/public\/icons\/page_white_stack.png" : {
@@ -823,6 +834,17 @@
       "outputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/node_modules\/bson\/test\/browser\/suite2-min.js",
       "fileType" : 64
     },
+    "\/build\/js\/views\/EntryView.js" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 1,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/build\/js\/views\/EntryView.js",
+      "outputStyle" : 0,
+      "syntaxCheckerStyle" : 0,
+      "outputAbbreviatedPath" : "\/build\/js\/views\/EntryView-min.js",
+      "fileType" : 64
+    },
     "\/deploy\/node_modules\/express\/node_modules\/connect\/lib\/middleware\/favicon.js" : {
       "ignoreWasSetByUser" : 1,
       "ignore" : 1,
@@ -1105,17 +1127,6 @@
       "outputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/lib\/schematype-min.js",
       "fileType" : 64
     },
-    "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/node_modules\/bson\/test\/node\/data\/test_gs_weird_bug.png" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 1,
-      "hidden" : 1,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/node_modules\/bson\/test\/node\/data\/test_gs_weird_bug.png",
-      "processed" : 0,
-      "outputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/node_modules\/bson\/test\/node\/data\/test_gs_weird_bug.png",
-      "initialSize" : 52184,
-      "fileType" : 8192
-    },
     "\/deploy\/node_modules\/mongoose\/node_modules\/sliced\/bench.js" : {
       "ignoreWasSetByUser" : 1,
       "ignore" : 1,
@@ -1126,6 +1137,17 @@
       "syntaxCheckerStyle" : 0,
       "outputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/sliced\/bench-min.js",
       "fileType" : 64
+    },
+    "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/node_modules\/bson\/test\/node\/data\/test_gs_weird_bug.png" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 1,
+      "hidden" : 1,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/node_modules\/bson\/test\/node\/data\/test_gs_weird_bug.png",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/node_modules\/bson\/test\/node\/data\/test_gs_weird_bug.png",
+      "initialSize" : 52184,
+      "fileType" : 8192
     },
     "\/deploy\/node_modules\/express\/node_modules\/debug\/lib\/debug.js" : {
       "ignoreWasSetByUser" : 1,
@@ -1618,17 +1640,6 @@
       "outputAbbreviatedPath" : "\/build\/js\/collections\/Creatives-min.js",
       "fileType" : 64
     },
-    "\/deploy\/node_modules\/mongoose\/lib\/errors\/divergentArray.js" : {
-      "ignoreWasSetByUser" : 1,
-      "ignore" : 1,
-      "hidden" : 1,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/lib\/errors\/divergentArray.js",
-      "outputStyle" : 0,
-      "syntaxCheckerStyle" : 0,
-      "outputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/lib\/errors\/divergentArray-min.js",
-      "fileType" : 64
-    },
     "\/deploy\/node_modules\/express\/node_modules\/connect\/lib\/patch.js" : {
       "ignoreWasSetByUser" : 1,
       "ignore" : 1,
@@ -1638,6 +1649,17 @@
       "outputStyle" : 0,
       "syntaxCheckerStyle" : 0,
       "outputAbbreviatedPath" : "\/deploy\/node_modules\/express\/node_modules\/connect\/lib\/patch-min.js",
+      "fileType" : 64
+    },
+    "\/deploy\/node_modules\/mongoose\/lib\/errors\/divergentArray.js" : {
+      "ignoreWasSetByUser" : 1,
+      "ignore" : 1,
+      "hidden" : 1,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/lib\/errors\/divergentArray.js",
+      "outputStyle" : 0,
+      "syntaxCheckerStyle" : 0,
+      "outputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/lib\/errors\/divergentArray-min.js",
       "fileType" : 64
     },
     "\/deploy\/node_modules\/express\/node_modules\/connect\/node_modules\/formidable\/example\/post.js" : {
@@ -1988,16 +2010,14 @@
       "outputAbbreviatedPath" : "\/deploy\/node_modules\/ejs\/support\/compile-min.js",
       "fileType" : 64
     },
-    "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/node_modules\/bson\/test\/node\/bson_test.js" : {
-      "ignoreWasSetByUser" : 1,
+    "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/node_modules\/bson\/tools\/jasmine-1.1.0\/jasmine.css" : {
+      "ignoreWasSetByUser" : 0,
       "ignore" : 1,
       "hidden" : 1,
       "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/node_modules\/bson\/test\/node\/bson_test.js",
-      "outputStyle" : 0,
-      "syntaxCheckerStyle" : 0,
-      "outputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/node_modules\/bson\/test\/node\/bson_test-min.js",
-      "fileType" : 64
+      "inputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/node_modules\/bson\/tools\/jasmine-1.1.0\/jasmine.css",
+      "outputAbbreviatedPath" : "No Output Path",
+      "fileType" : 16
     },
     "\/deploy\/node_modules\/express\/node_modules\/connect\/lib\/public\/icons\/page_white_wrench.png" : {
       "ignoreWasSetByUser" : 0,
@@ -2010,14 +2030,16 @@
       "initialSize" : 613,
       "fileType" : 8192
     },
-    "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/node_modules\/bson\/tools\/jasmine-1.1.0\/jasmine.css" : {
-      "ignoreWasSetByUser" : 0,
+    "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/node_modules\/bson\/test\/node\/bson_test.js" : {
+      "ignoreWasSetByUser" : 1,
       "ignore" : 1,
       "hidden" : 1,
       "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/node_modules\/bson\/tools\/jasmine-1.1.0\/jasmine.css",
-      "outputAbbreviatedPath" : "No Output Path",
-      "fileType" : 16
+      "inputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/node_modules\/bson\/test\/node\/bson_test.js",
+      "outputStyle" : 0,
+      "syntaxCheckerStyle" : 0,
+      "outputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/node_modules\/bson\/test\/node\/bson_test-min.js",
+      "fileType" : 64
     },
     "\/deploy\/node_modules\/express\/node_modules\/connect\/lib\/public\/icons\/page.png" : {
       "ignoreWasSetByUser" : 0,
@@ -2052,17 +2074,6 @@
       "outputAbbreviatedPath" : "\/deploy\/node_modules\/express\/node_modules\/methods\/index-min.js",
       "fileType" : 64
     },
-    "\/deploy\/node_modules\/ejs\/benchmark.js" : {
-      "ignoreWasSetByUser" : 1,
-      "ignore" : 1,
-      "hidden" : 1,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/deploy\/node_modules\/ejs\/benchmark.js",
-      "outputStyle" : 0,
-      "syntaxCheckerStyle" : 0,
-      "outputAbbreviatedPath" : "\/deploy\/node_modules\/ejs\/benchmark-min.js",
-      "fileType" : 64
-    },
     "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/index.js" : {
       "ignoreWasSetByUser" : 1,
       "ignore" : 1,
@@ -2072,6 +2083,17 @@
       "outputStyle" : 0,
       "syntaxCheckerStyle" : 0,
       "outputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/index-min.js",
+      "fileType" : 64
+    },
+    "\/deploy\/node_modules\/ejs\/benchmark.js" : {
+      "ignoreWasSetByUser" : 1,
+      "ignore" : 1,
+      "hidden" : 1,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/deploy\/node_modules\/ejs\/benchmark.js",
+      "outputStyle" : 0,
+      "syntaxCheckerStyle" : 0,
+      "outputAbbreviatedPath" : "\/deploy\/node_modules\/ejs\/benchmark-min.js",
       "fileType" : 64
     },
     "\/deploy\/node_modules\/express\/node_modules\/connect\/node_modules\/formidable\/example\/upload.js" : {
@@ -2114,17 +2136,6 @@
       "outputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/lib\/mongodb\/connection\/mongos-min.js",
       "fileType" : 64
     },
-    "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/lib\/mongodb\/commands\/get_more_command.js" : {
-      "ignoreWasSetByUser" : 1,
-      "ignore" : 1,
-      "hidden" : 1,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/lib\/mongodb\/commands\/get_more_command.js",
-      "outputStyle" : 0,
-      "syntaxCheckerStyle" : 0,
-      "outputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/lib\/mongodb\/commands\/get_more_command-min.js",
-      "fileType" : 64
-    },
     "\/deploy\/node_modules\/mongoose\/lib\/schemadefault.js" : {
       "ignoreWasSetByUser" : 1,
       "ignore" : 1,
@@ -2134,6 +2145,17 @@
       "outputStyle" : 0,
       "syntaxCheckerStyle" : 0,
       "outputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/lib\/schemadefault-min.js",
+      "fileType" : 64
+    },
+    "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/lib\/mongodb\/commands\/get_more_command.js" : {
+      "ignoreWasSetByUser" : 1,
+      "ignore" : 1,
+      "hidden" : 1,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/lib\/mongodb\/commands\/get_more_command.js",
+      "outputStyle" : 0,
+      "syntaxCheckerStyle" : 0,
+      "outputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/lib\/mongodb\/commands\/get_more_command-min.js",
       "fileType" : 64
     },
     "\/deploy\/node_modules\/express\/node_modules\/mkdirp\/test\/sync.js" : {
@@ -2202,17 +2224,6 @@
       "initialSize" : 579,
       "fileType" : 8192
     },
-    "\/deploy\/node_modules\/express\/node_modules\/connect\/node_modules\/qs\/test\/stringify.js" : {
-      "ignoreWasSetByUser" : 1,
-      "ignore" : 1,
-      "hidden" : 1,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/deploy\/node_modules\/express\/node_modules\/connect\/node_modules\/qs\/test\/stringify.js",
-      "outputStyle" : 0,
-      "syntaxCheckerStyle" : 0,
-      "outputAbbreviatedPath" : "\/deploy\/node_modules\/express\/node_modules\/connect\/node_modules\/qs\/test\/stringify-min.js",
-      "fileType" : 64
-    },
     "\/deploy\/node_modules\/mongoose\/lib\/drivers\/node-mongodb-native\/binary.js" : {
       "ignoreWasSetByUser" : 1,
       "ignore" : 1,
@@ -2222,6 +2233,17 @@
       "outputStyle" : 0,
       "syntaxCheckerStyle" : 0,
       "outputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/lib\/drivers\/node-mongodb-native\/binary-min.js",
+      "fileType" : 64
+    },
+    "\/deploy\/node_modules\/express\/node_modules\/connect\/node_modules\/qs\/test\/stringify.js" : {
+      "ignoreWasSetByUser" : 1,
+      "ignore" : 1,
+      "hidden" : 1,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/deploy\/node_modules\/express\/node_modules\/connect\/node_modules\/qs\/test\/stringify.js",
+      "outputStyle" : 0,
+      "syntaxCheckerStyle" : 0,
+      "outputAbbreviatedPath" : "\/deploy\/node_modules\/express\/node_modules\/connect\/node_modules\/qs\/test\/stringify-min.js",
       "fileType" : 64
     },
     "\/deploy\/node_modules\/express\/node_modules\/connect\/node_modules\/qs\/test\/browser\/mocha.css" : {
@@ -3374,17 +3396,6 @@
       "outputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/lib\/errors\/missingSchema-min.js",
       "fileType" : 64
     },
-    "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/lib\/mongodb\/index.js" : {
-      "ignoreWasSetByUser" : 1,
-      "ignore" : 1,
-      "hidden" : 1,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/lib\/mongodb\/index.js",
-      "outputStyle" : 0,
-      "syntaxCheckerStyle" : 0,
-      "outputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/lib\/mongodb\/index-min.js",
-      "fileType" : 64
-    },
     "\/deploy\/node_modules\/express\/node_modules\/send\/node_modules\/mime\/mime.js" : {
       "ignoreWasSetByUser" : 1,
       "ignore" : 1,
@@ -3394,6 +3405,17 @@
       "outputStyle" : 0,
       "syntaxCheckerStyle" : 0,
       "outputAbbreviatedPath" : "\/deploy\/node_modules\/express\/node_modules\/send\/node_modules\/mime\/mime-min.js",
+      "fileType" : 64
+    },
+    "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/lib\/mongodb\/index.js" : {
+      "ignoreWasSetByUser" : 1,
+      "ignore" : 1,
+      "hidden" : 1,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/lib\/mongodb\/index.js",
+      "outputStyle" : 0,
+      "syntaxCheckerStyle" : 0,
+      "outputAbbreviatedPath" : "\/deploy\/node_modules\/mongoose\/node_modules\/mongodb\/lib\/mongodb\/index-min.js",
       "fileType" : 64
     },
     "\/deploy\/node_modules\/express\/node_modules\/connect\/lib\/public\/icons\/page_code.png" : {
@@ -4246,6 +4268,17 @@
       "outputAbbreviatedPath" : "\/deploy\/node_modules\/express\/index-min.js",
       "fileType" : 64
     },
+    "\/build\/js\/routers\/AppRouter.js" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 1,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/build\/js\/routers\/AppRouter.js",
+      "outputStyle" : 0,
+      "syntaxCheckerStyle" : 0,
+      "outputAbbreviatedPath" : "\/build\/js\/routers\/AppRouter-min.js",
+      "fileType" : 64
+    },
     "\/deploy\/node_modules\/express\/node_modules\/connect\/lib\/public\/icons\/page_white_php.png" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 1,
@@ -4601,14 +4634,35 @@
     {
       "type" : 0,
       "position" : 6,
-      "linkedFileAbbreviatedPath" : "\/build\/js\/views\/ShowView.js",
+      "linkedFileAbbreviatedPath" : "\/build\/js\/views\/AboutView.js",
       "baseFileAbbreviatedPath" : "\/build\/js\/app.js",
       "followForSyntaxChecking" : 1
     },
     {
       "type" : 0,
       "position" : 7,
+      "linkedFileAbbreviatedPath" : "\/build\/js\/views\/ShowView.js",
+      "baseFileAbbreviatedPath" : "\/build\/js\/app.js",
+      "followForSyntaxChecking" : 1
+    },
+    {
+      "type" : 0,
+      "position" : 8,
+      "linkedFileAbbreviatedPath" : "\/build\/js\/views\/EntryView.js",
+      "baseFileAbbreviatedPath" : "\/build\/js\/app.js",
+      "followForSyntaxChecking" : 1
+    },
+    {
+      "type" : 0,
+      "position" : 9,
       "linkedFileAbbreviatedPath" : "\/build\/js\/views\/AppView.js",
+      "baseFileAbbreviatedPath" : "\/build\/js\/app.js",
+      "followForSyntaxChecking" : 1
+    },
+    {
+      "type" : 0,
+      "position" : 10,
+      "linkedFileAbbreviatedPath" : "\/build\/js\/routers\/AppRouter.js",
       "baseFileAbbreviatedPath" : "\/build\/js\/app.js",
       "followForSyntaxChecking" : 1
     }
