--- a/deploy/package.json
+++ b/deploy/package.json
@@ -1,14 +1,14 @@
 {
   "name": "rvamakes",
   "subdomain": "rvamakes",
-  "version": "0.0.1-9",
+  "version": "0.0.1-10",
   "private": true,
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
     "express": "3.1.2",
-    "ejs": "*",
+    "ejs": "0.8.3",
     "mongoose": "3.6.4"
   },
   "engines": {
