--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,106 @@
-.idea/
+
 connstring.txt
 codekit-config.json
+
+
+# Source file type that should be stored on creative server #
+#############################################################
+*.mp4
+*.psd
+*.ai
+*.webm
+*.mov
+*.idd
+
+# Node.js Ignores #
+###################
+
+node_modules/
+
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
+
+npm-debug.log
+
+# IDEA Ignores #
+################
+*.iml
+*.ipr
+*.iws
+.idea/
+out/
+local.properties
+
+# Generic Android ignores #
+###########################
+bin/
+target
+gen/
+
+# Built Application Files
+###########################
+*.apk
+*.ap_
+
+# Files for the dex VM
+###########################
+*.dex
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+*.7z
+*.dmg
+*.gz
+*.iso
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+log/
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
 .DS_Store
+.DS_Store?
+ehthumbs.db
+Icon?
+Thumbs.db
+
+# VCS #
+#######
+.svn
+.svn/
+CVS
+
+# XCode 4 #
+###########
+*.xcuserstate
+*.pbxuser
+*.mode1v3
+*.mode2v3
+*.perspectivev3
+xcuserdata/
