--- a/deploy/package.json
+++ b/deploy/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rvamakes",
   "subdomain": "rvamakes",
-  "version": "0.0.1-31",
+  "version": "0.0.1-32",
   "private": true,
   "scripts": {
     "start": "node app.js"
@@ -9,7 +9,8 @@
   "dependencies": {
     "express": "3.1.2",
     "ejs": "0.8.3",
-    "mongoose": "3.6.4"
+    "mongoose": "3.6.4",
+    "aws-sdk": "0.9.7-pre.8"
   },
   "engines": {
     "node": "0.8.x"
