--- a/deploy/package.json
+++ b/deploy/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "rvamakes",
-  "subdomain": "rvamakes",
-  "version": "0.0.1-34",
-  "private": true,
-  "scripts": {
-    "start": "node app.js"
-  },
-  "dependencies": {
-    "express": "3.1.2",
-    "ejs": "0.8.3",
-    "mongoose": "3.6.4",
-    "aws-sdk": "0.9.7-pre.8"
-  },
-  "engines": {
-    "node": "0.8.x"
-  }
+    "name": "rvamakes",
+    "subdomain": "rvamakes",
+    "version": "0.0.1-34",
+    "private": true,
+    "scripts": {
+        "start": "node app.js"
+    },
+    "dependencies": {
+        "express": "3.1.2",
+        "ejs": "0.8.3",
+        "mongoose": "3.6.4",
+        "aws-sdk": "0.9.7-pre.8",
+        "node-twitter": "https://github.com/istrategylabs/node-twitter/tarball/master"
+    },
+    "engines": {
+        "node": "0.8.x"
+    }
 }
