--- a/deploy/package.json
+++ b/deploy/package.json
@@ -6,6 +6,10 @@
     "scripts": {
         "start": "node app.js"
     },
+    "domains":[
+        "rvamakes.com",
+        "www.rvamakes.com"
+    ],
     "dependencies": {
         "express": "3.1.2",
         "ejs": "0.8.3",
